k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: asx-dashboard-service
  labels:
    app: asx-dashboard
spec:
  type: NodePort
  ports:
    - port: 8501
      targetPort: 8501
      nodePort: 30182
      protocol: TCP
      name: http
  selector:
    app: asx-dashboard
